css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}
body {
    font-family: "Roboto Light", sans-serif;
    font-weight: lighter;
}
.nav-bar {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-top: 5px;
}
.main-logo {
    height: 3.5vh;
    padding-left: 2vw;
}
.cart-logo {
    height: 3vh;
    cursor: pointer;
    padding-right: 5vw;
}
#cart-count {
    display: none;
    position: absolute;
    top: 0.2%;
    right: 4%;
    color: white;
    font-size: 0.6rem;
    border-radius: 10vw;
    padding: 2px 4px 2px 4px;
    background: rgb(128, 128, 128);
}
#cart-background {
    background: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(5px);
    width: 100vw;
    height: 100vh;
    position: fixed;
    top: 0;
    right: -100vmax;
    transition: right 0.3s;
}
#cart-background.close{
    right: -100vmax;
}
#cart-background.open {
    right: 0;
}
.cart {
    background: rgba(255, 255, 255, 0.98);
    max-height: 100vh;
    height: 100vh;
    width: 100vw;
    position: absolute;
    right: 0;
    top: 0;
}
.cart-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1vh;
    border-bottom: 1px solid rgba(128, 128, 128, 0.7);
}
.cart-review {
    font-size: 0.8rem;
}
.cart-products {
    display: flex;
    flex-direction: column;
}
.cart-product {
    display: flex;
    justify-content: space-around;
    align-items: center;
}
.cart-product-image {
    width: 10vh;
}
.cart-product-delete{
    width: 4vh;
    cursor: pointer;
}
.cart-buy {
    border-top: 1px solid rgba(128, 128, 128, 0.7);
    background: rgba(128, 128, 128, 0.08);
    text-align: center;
    font-size: 2rem;
    width: 100%;
    height: 8vh;
    padding: 1vh;

    display: none;
}
.cart-buy:hover {
    cursor: pointer;
    background: rgba(128, 128, 128, 0.2);
}
.cart-buy:active {
    box-shadow: 0 1px 5px rgba(128, 128, 128, 0.2);
}
.main-description {
    text-align: center;
    padding: 4vw 0 4vw 0;
    font-size: 0.5rem;
}
.detail-description {
    padding: 2vw 0 2vw 0;
}

.accessories-nav {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    margin-bottom: 1vh;
}
.accessory-nav {
    display: flex;
    flex-direction: column;
    background: rgba(128, 128, 128, 0.05);
    text-align: center;
    border: 1px solid transparent;
    transition: border 0.2s;
    cursor: pointer;

    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
}
.accessory-nav:hover {
    border: 1px solid black;
 }
.accessories-image {
    width: 25vw;
    height: auto;
}
.accessory-header {
    font-size: 0.7rem;
    padding-bottom: 0.5rem;
}
.products {
    display: flex;
    align-items: center;
    flex-direction: column;
}
.accessories-products {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 5vw;
}
.accessories-product {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    justify-content: space-between;

    height: 30vh;
    width: 40vw;

    padding: 2.1vw;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
    border-radius: 3px;
}
.products > h2 {
    padding: 3vw;
}
.accessories-product-title {
    margin-top: 2vh;
    font-size: 0.8rem;
    font-weight: lighter;
}
.accessories-product-image {
    width: 30vw;
    height: auto;
}
.accessories-product-price {
    background: rgba(128, 128, 128, 0.08);
    border-radius: 5px;
    margin-top: 4vh;
    padding: 2vw;
    width: 100%;

    justify-self: flex-end;
    align-self: center;

    font-size: 1rem;
    font-weight: 500;
}
.accessories-product-price:hover {
    cursor: pointer;
    background: rgba(128, 128, 128, 0.2);
}
.accessories-product-price:active {
    box-shadow: 0 1px 5px rgba(128, 128, 128, 0.2);
}

.contacts {
    margin-top: 4vh;
    display: flex;

    background: rgba(128, 128, 128, 0.15);
    height: 20vh;
}
@media (min-width: 499px) {
    .accessories-product {
        height: 40vh;
        width: 35vw;
    }
    .accessories-product-title {
        margin-top: 2vh;
        font-size: 1rem;
    }
    .accessories-product-price {
        font-size: 1.2rem;
    }
}
@media (min-width: 750px) {
    .accessories-product {
        height: 45vh;
        width: 40vw;
    }
    .accessories-product-image {
        width: 25vw;
    }
    .accessories-product-title {
        margin-top: 2vh;
        font-size: 1.2rem;
    }
    .accessories-product-price {
        font-size: 1.4rem;
    }
}
@media (min-width: 1025px) {
    .nav-bar {
        justify-content: space-around;
    }
    .main-logo {
        height: 4.5vh;
    }
    .cart-logo {
        height: 4vh;
    }
    .cart {
        width: 50vw;
    }
    #cart-count {
        top: 0.4%;
        right: 24.8%;
        color: white;
        font-size: 0.7rem;
    }
    .main-description {
        font-size: 1em;
        padding: 3vw 0 2vw 0;
    }
    .detail-description {
        padding: 0.5vw 0 1vw 0;
    }
    .accessories-nav {
        justify-content: center;
        gap: 3vw;
    }
    .accessory-header {
        font-size: 1.2em;
    }
    .products > h2 {
        font-size: 2rem;
    }
    .accessories-image{
        width: 16vw;
    }
    .accessories-product {
        height: 50vh;
    }
    .accessories-product {
        height: auto;
        width: 18vw;
    }
    .accessories-product-image {
        width: 11vw;
    }
    .accessories-products {
        grid-template-columns: repeat(3, 1fr);
        grid-gap: 3vw;
    }
    .accessories-product-price {
        padding: 0.8vw;
        font-size: 1.3rem;
    }

}

